# instagram-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  get_token.py  pyproject.toml  test_async_score.py  test_caption.py  test_gemini.py  test_score_photo.py
backend/: celery_app.py  config.py  main.py
backend/api/: deps.py
backend/api/routes/: auth.py  captions.py  photos.py
backend/captions/: generator.py  schemas.py
backend/db/: crud.py  database.py  models.py
backend/instagram/: auth.py
backend/rag/: retriever.py
backend/tasks/: photo_tasks.py
backend/vision/: schemas.py  scorer.py
data/: ingest_rag.py  scrape_instagram.py
deploy/: README.md  nginx.conf  setup_ec2.sh
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CaptionCard.tsx  ScoreCard.tsx  UploadZone.tsx
frontend/lib/: api.ts  types.ts
